--- a/app/src/main/res/layout/activity_.xml
+++ b/app/src/main/res/layout/activity_.xml
@@ -8,10 +8,100 @@
 
 
     <Button
+        android:background="@drawable/button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"
-        android:id="@+id/btnOk"
+        android:text="Show Report"
+        android:id="@+id/btn_Report"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="hostname"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Mac"
+        android:id="@+id/textView2"
+        android:layout_alignBottom="@+id/editText2"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/editText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText3"
+        android:layout_below="@+id/editText2"
+        android:layout_marginTop="46dp"
+        android:layout_alignStart="@+id/editText2" />
+
+    <Button
+        android:background="@drawable/button_style"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Name"
+        android:id="@+id/btn_setName"
+        android:layout_alignBottom="@+id/editText3"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Monitor Device       "
+        android:id="@+id/switch_Monitor"
+        android:layout_marginTop="41dp"
+        android:checked="false"
+        android:layout_below="@+id/editText3"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Block from Internet"
+        android:id="@+id/switch_blockInternet"
+        android:checked="false"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Block from Lan       "
+        android:id="@+id/switch_blockLan"
+        android:layout_below="@+id/switch_blockInternet"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="41dp"
+        android:checked="false" />
+
+
 </RelativeLayout>
