--- a/app/src/main/res/layout/activity_.xml
+++ b/app/src/main/res/layout/activity_.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context="com.swproject.fi.swproject.SomeActivity">
 
 
@@ -26,12 +28,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/editHostName"
         android:layout_alignBottom="@+id/textView"
         android:layout_alignParentEnd="true" />
 
@@ -41,28 +42,28 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Mac"
         android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/editText2"
+        android:layout_alignBottom="@+id/editMac"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/editText" />
+        android:id="@+id/editMac"
+        android:layout_below="@+id/editHostName"
+        android:layout_alignStart="@+id/editHostName"
+        android:layout_marginTop="20dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText3"
-        android:layout_below="@+id/editText2"
+        android:id="@+id/editName"
+        android:layout_below="@+id/editMac"
         android:layout_marginTop="46dp"
-        android:layout_alignStart="@+id/editText2" />
+        android:layout_alignStart="@+id/editMac"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <Button
         android:background="@drawable/button_style"
@@ -71,7 +72,7 @@
         android:layout_height="wrap_content"
         android:text="Set Name"
         android:id="@+id/btn_setName"
-        android:layout_alignBottom="@+id/editText3"
+        android:layout_alignBottom="@+id/editName"
         android:layout_alignParentStart="true" />
 
     <Switch
@@ -81,7 +82,7 @@
         android:id="@+id/switch_Monitor"
         android:layout_marginTop="41dp"
         android:checked="false"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/editName"
         android:layout_alignParentStart="true" />
 
     <Switch
