--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.swproject.fi.swproject.Data">
 
-    <TextView android:text="                               Data visiluation" android:layout_width="wrap_content"
+    <TextView
+        android:text="Data visiluation"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
