--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.swproject.fi.swproject.ReportActivity">
 
-    <TextView android:text="                     Device network usage report              "
+    <TextView
+        android:text="Device network usage report"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fontFeatureSettings="@string/abc_action_bar_home_description_format"
@@ -20,6 +21,7 @@
         android:id="@+id/btn_showConnections"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="startDataActivity" />
 
 </RelativeLayout>
